c/src/test/resources/c/nec_bnc/invalid/ex37.ctrl
<controlFile>
  <sourceFile name="../ex37.c" id="1" />
  <run>
    <startPosition fileId="1" line="10" />
    <wayPoint fileId="1" line="13" >
      <command>
        <cascadeFunction>cascade_assume</cascadeFunction>
        <argument><![CDATA[
          n > 0
        ]]>
        </argument>
      </command>
    </wayPoint>
    <wayPoint fileId="1" line="19" >
      <command>
        <cascadeFunction>cascade_check</cascadeFunction>
        <argument><![CDATA[
          valid(&b[2*n-1]) && valid(b)
        ]]>
        </argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="22" />
  </run>
</controlFile>